--- a/.github/workflow/lint.yaml
+++ b/.github/workflow/lint.yaml
@@ -4,5 +4,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: "checkout"
+        uses: actions/checkout@v3
       - run: "npm i"
       - run: "npx --max-warnig=0 eslint src/"
