--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,3 +8,4 @@ jobs:
         uses: actions/checkout@v3
       - run: "npm i"
       - run: "npx --max-warnig=0 eslint src/"
+      - run: "npx prettier --check src/"
